--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div role="region" id="container">
         <main id="main">
           <div id="box">
-            <h3 class="title">Your Result</h3>
+            <h4 class="title">Your Result</h4>
             <div>
               <div id="circle">
                 <h1>76</h1>
@@ -23,7 +23,7 @@
             <h2>Great</h2>
             <p>
               You scored higher than 65% of the people who have taken these
-              tests
+              tests.
             </p>
           </div>
         </main>
